Another changes from DB

--- a/src/admin/public/index.html
+++ b/src/admin/public/index.html
@@ -3,4 +3,12 @@
     - afișează toate articolele cu opțiunea de a le edita / șterge
     - opțiunea de a adăuga un articol nou
 -->
+<style>
+    h1 {
+        font-weight: 900;
+    }
+</style>
+<script>
+    alert('Hello');
+</script>
 <h1>CMS</h1>
