--- a/src/admin/public/index.html
+++ b/src/admin/public/index.html
@@ -1,14 +1,19 @@
-<!-- @todo:
-    Completează partea de CMS cu:
-    - afișează toate articolele cu opțiunea de a le edita / șterge
-    - opțiunea de a adăuga un articol nou
--->
-<style>
-    h1 {
-        font-weight: 900;
-    }
-</style>
-<script>
-    alert('Hello');
-</script>
-<h1>CMS</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Admin</title>
+    <link rel="stylesheet" href="style.css">
+    <script defer src="static.js"></script>
+</head>
+<body>
+    <h1>Panou de administrare</h1>
+    <div id="posts">
+        <h2>Articole</h2>
+        <ul id="posts-list">
+            <!-- List will be populated on init -->
+        </ul>
+    </div>
+</body>
+</html>
