--- a/src/admin/public/index.html
+++ b/src/admin/public/index.html
@@ -1,6 +1,23 @@
-<!-- @todo:
-    Completează partea de CMS cu:
-    - afișează toate articolele cu opțiunea de a le edita / șterge
-    - opțiunea de a adăuga un articol nou
--->
-<h1>CMS</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Admin</title>
+    <link rel="stylesheet" href="style.css">
+    <script defer src="static.js"></script>
+</head>
+
+<body>
+    <h1>Dashbord</h1>
+    <div id="posts">
+        <h2>
+            Posts
+        </h2>
+        <ul id="posts-list">
+        </ul>
+    </div>
+</body>
+
+</html>
